--- a/src/test/resources/templates/testFlow/address.html
+++ b/src/test/resources/templates/testFlow/address.html
@@ -2,7 +2,11 @@
   <th:block th:ref="testAddress">
     <div class="form-card__content">
       <th:block
-          th:replace="'fragments/inputs/address' :: address(validate=true, inputName='address')"/>
+          th:replace="'fragments/inputs/address' :: address(validate=false , inputName='address')"/>
+      <th:block
+          th:replace="'fragments/inputs/address' :: address(validate=true, inputName='validatedAddress')"/>
+      <!--      <th:block-->
+      <!--          th:replace="'fragments/display/validatedAddress' :: address(validate=true, inputName='validatedAddress')"/>-->
     </div>
   </th:block>
 </th:block>
