Added Icons for the Submit UBI page:  Next Steps #184393815
Co-authored-by: Alex Gonzalez <agonzalez@codeforamerica.org>

--- a/src/main/resources/templates/fragments/icons.html
+++ b/src/main/resources/templates/fragments/icons.html
@@ -1883,6 +1883,90 @@
         </svg>
       </td>
     </tr>
+    <tr>
+      <td>phoneInTalkBack</td>
+      <td>
+        <svg th:fragment="phoneInTalkBack" aria-hidden="true" width="30" height="30"
+             viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_114_562)">
+            <path
+                d="M23.9881 18.631C22.5 18.631 21.0714 18.3929 19.7381 17.9524C19.3214 17.8214 18.8571 17.9167 18.5238 18.2381L15.9048 20.8571C12.5357 19.1429 9.77381 16.3929 8.05952 13.0119L10.6786 10.381C11.0119 10.0714 11.1071 9.60714 10.9762 9.19048C10.5357 7.85714 10.2976 6.42857 10.2976 4.94048C10.2976 4.28571 9.7619 3.75 9.10714 3.75H4.94048C4.28571 3.75 3.75 4.28571 3.75 4.94048C3.75 16.119 12.8095 25.1786 23.9881 25.1786C24.6429 25.1786 25.1786 24.6429 25.1786 23.9881V19.8214C25.1786 19.1667 24.6429 18.631 23.9881 18.631ZM22.7976 14.4643H25.1786C25.1786 8.54762 20.381 3.75 14.4643 3.75V6.13095C19.0714 6.13095 22.7976 9.85714 22.7976 14.4643ZM18.0357 14.4643H20.4167C20.4167 11.1786 17.75 8.5119 14.4643 8.5119V10.8929C16.4405 10.8929 18.0357 12.4881 18.0357 14.4643Z"
+                fill="black"/>
+          </g>
+          <defs>
+            <clipPath id="clip0_114_562">
+              <rect width="30" height="30" fill="white"/>
+            </clipPath>
+          </defs>
+        </svg>
+      </td>
+    </tr>
+    <tr>
+      <td>localPostOfficeBlack</td>
+      <td>
+        <svg th:fragment="localPostOfficeBlack" aria-hidden="true" width="30" height="30"
+             viewBox="0 0 30 30" fill="none"
+             xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_114_565)">
+            <path
+                d="M25.0001 5H5.00009C3.62509 5 2.51259 6.125 2.51259 7.5L2.50009 22.5C2.50009 23.875 3.62509 25 5.00009 25H25.0001C26.3751 25 27.5001 23.875 27.5001 22.5V7.5C27.5001 6.125 26.3751 5 25.0001 5ZM25.0001 10L15.0001 16.25L5.00009 10V7.5L15.0001 13.75L25.0001 7.5V10Z"
+                fill="black"/>
+          </g>
+          <defs>
+            <clipPath id="clip0_114_565">
+              <rect width="30" height="30" fill="white"/>
+            </clipPath>
+          </defs>
+        </svg>
+      </td>
+    </tr>
+    <tr>
+      <td>communicate</td>
+      <td>
+        <svg th:fragment="communicate" aria-hidden="true" width="30" height="30" viewBox="0 0 30 30"
+             fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+              d="M11.2474 7.79086C12.4405 7.79086 13.5848 8.25314 14.4285 9.07602C15.2722 9.89889 15.7461 11.0149 15.7461 12.1787C15.7461 13.3424 15.2722 14.4584 14.4285 15.2813C13.5848 16.1042 12.4405 16.5665 11.2474 16.5665C10.0543 16.5665 8.91001 16.1042 8.06633 15.2813C7.22266 14.4584 6.74869 13.3424 6.74869 12.1787C6.74869 11.0149 7.22266 9.89889 8.06633 9.07602C8.91001 8.25314 10.0543 7.79086 11.2474 7.79086V7.79086ZM11.2474 18.7604C14.2503 18.7604 20.2448 20.2303 20.2448 23.1482V25.3421H2.24997V23.1482C2.24997 20.2303 8.24451 18.7604 11.2474 18.7604ZM19.9749 8.18576C22.2468 10.5991 22.2468 13.9448 19.9749 16.1606L18.0855 14.3068C19.0302 13.0124 19.0302 11.334 18.0855 10.0396L19.9749 8.18576ZM23.6976 4.5C28.1176 8.94266 28.0839 15.5902 23.6976 19.8573L21.8644 18.0693C24.9798 14.581 24.9798 9.60083 21.8644 6.28803L23.6976 4.5Z"
+              fill="black"/>
+        </svg>
+      </td>
+    </tr>
+    <tr>
+      <td>nextStepsIcon</td>
+      <td>
+        <svg th:fragment="nextStepsIcon" aria-hidden="true" width="100" height="75"
+             viewBox="0 0 100 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M79.5323 63.0161C73.4547 68.0396 65.2557 68.5292 57.473 69.8791C49.531 71.2566 41.4632 73.7579 33.8906 70.9325C25.8233 67.9224 18.7202 61.9052 15.1252 54.0783C11.6027 46.4091 13.1522 37.6751 14.8286 29.4309C16.4321 21.5451 18.5872 13.4229 24.4985 7.98227C30.2887 2.65303 38.4612 1.37867 46.2946 0.470024C53.841 -0.40534 61.5031 -0.296868 68.4234 2.88711C75.5542 6.16795 81.3467 11.6848 85.3504 18.4393C89.5582 25.5382 92.5384 33.6172 91.4737 41.7747C90.3944 50.0446 85.9478 57.7131 79.5323 63.0161Z"
+                fill="#9BCBEB"/>
+          <path d="M100 36L85 27.3398L85 44.6603L100 36ZM6 37.5L86.5 37.5L86.5 34.5L6 34.5L6 37.5Z"
+                fill="black"/>
+          <circle cx="11" cy="36" r="7.5" fill="white" stroke="black" stroke-width="3"/>
+          <circle cx="37" cy="36" r="7.5" fill="white" stroke="black" stroke-width="3"/>
+          <circle cx="64" cy="36" r="7.5" fill="white" stroke="black" stroke-width="3"/>
+        </svg>
+      </td>
+    </tr>
+    <tr>
+      <td>greenCheckmark</td>
+      <td>
+        <svg th:fragment="greenCheckmark" aria-hidden="true" width="13" height="13"
+             viewBox="0 0 13 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <circle cx="6.5" cy="6.5" r="6.5" fill="#00891B" fill-opacity="0.8"/>
+          <g clip-path="url(#clip0_114_574)">
+            <path
+                d="M5.18996 8.32109L3.36839 6.49952L2.75027 7.11763L5.18996 9.55731L10.4319 4.31538L9.81378 3.69727L5.18996 8.32109Z"
+                fill="white"/>
+          </g>
+          <defs>
+            <clipPath id="clip0_114_574">
+              <rect width="10.4839" height="10.4839" fill="white"
+                    transform="translate(1.25851 1.25781)"/>
+            </clipPath>
+          </defs>
+        </svg>
+      </td>
+    </tr>
     </tbody>
   </table>
 </article>
