--- a/src/main/resources/templates/fragments/icons.html
+++ b/src/main/resources/templates/fragments/icons.html
@@ -1967,6 +1967,84 @@
         </svg>
       </td>
     </tr>
+    <tr>
+      <td>submitAdditionalIcons</td>
+      <td>
+        <svg th:fragment="submitAdditionalIcons" aria-hidden="true" width="35" height="35"
+             viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_114_502)">
+            <path
+                d="M20.4167 2.91699H8.75001C7.14584 2.91699 5.84793 4.22949 5.84793 5.83366L5.83334 29.167C5.83334 30.7712 7.13126 32.0837 8.73543 32.0837H26.25C27.8542 32.0837 29.1667 30.7712 29.1667 29.167V11.667L20.4167 2.91699ZM23.3333 26.2503H11.6667V23.3337H23.3333V26.2503ZM23.3333 20.417H11.6667V17.5003H23.3333V20.417ZM18.9583 13.1253V5.10449L26.9792 13.1253H18.9583Z"
+                fill="black"/>
+          </g>
+          <defs>
+            <clipPath id="clip0_114_502">
+              <rect width="35" height="35" fill="white"/>
+            </clipPath>
+          </defs>
+        </svg>
+      </td>
+    </tr>
+    <tr>
+      <td>downloadDocumentsIcon</td>
+      <td>
+        <svg th:fragment="downloadDocumentsIcon" aria-hidden="true" width="30" height="35"
+             viewBox="0 0 30 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path
+              d="M26 12.6471L18.5714 12.6471V1L7.42857 1L7.42857 12.6471L0 12.6471L13 26.2353L26 12.6471ZM0 30.1177L0 34H26V30.1177L0 30.1177Z"
+              fill="black"/>
+        </svg>
+      </td>
+    </tr>
+    <tr>
+      <td>successComputerPrimaryIcon</td>
+      <td>
+        <svg th:fragment="successComputerPrimaryIcon" aria-hidden="true" width="100" height="75"
+             viewBox="10 0 100 75" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_138_424)">
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M19.7894 33.777C20.7392 23.5204 20.2149 12.2543 28.0882 5.59909C36.1615 -1.2251 47.6387 -0.763551 57.9697 1.50406C68.4313 3.80034 78.2399 8.66379 83.7732 17.8218C90.0313 28.1793 93.7695 41.113 88.4755 51.9935C83.1963 62.8436 70.4027 66.2598 58.7169 69.3187C46.3241 72.5628 31.6402 77.9786 22.1853 69.3461C12.945 60.9095 18.6366 46.2261 19.7894 33.777Z"
+                  fill="#7AC943"/>
+            <path d="M69.005 39.2656H33.993V41.1906H69.005V39.2656Z" fill="black"
+                  fill-opacity="0.5"/>
+            <path d="M69.005 32.7764H33.993V34.7014H69.005V32.7764Z" fill="black"
+                  fill-opacity="0.5"/>
+            <path d="M69.005 26.2852H33.993V28.2102H69.005V26.2852Z" fill="black"
+                  fill-opacity="0.5"/>
+            <path d="M69.005 19.7959H33.993V21.7209H69.005V19.7959Z" fill="black"
+                  fill-opacity="0.5"/>
+            <rect x="21.5" y="8.5" width="61" height="48" rx="4.5" fill="white" stroke="black"
+                  stroke-width="3"/>
+            <rect x="30" y="16" width="44" height="28" rx="3" fill="#D8F2F2"/>
+            <line x1="36" y1="21" x2="68" y2="21" stroke="black" stroke-width="2"
+                  stroke-linecap="round" stroke-linejoin="round"/>
+            <line x1="36" y1="27" x2="68" y2="27" stroke="black" stroke-width="2"
+                  stroke-linecap="round" stroke-linejoin="round"/>
+            <line x1="36" y1="33" x2="68" y2="33" stroke="black" stroke-width="2"
+                  stroke-linecap="round" stroke-linejoin="round"/>
+            <line x1="36" y1="39" x2="68" y2="39" stroke="black" stroke-width="2"
+                  stroke-linecap="round" stroke-linejoin="round"/>
+            <line x1="21.5" y1="49.5" x2="82.5" y2="49.5" stroke="black" stroke-width="3"
+                  stroke-linecap="round" stroke-linejoin="round"/>
+            <line x1="59.4826" y1="56.7719" x2="61.4826" y2="69.7719" stroke="black"
+                  stroke-width="3"/>
+            <line x1="45.4826" y1="57.2281" x2="43.4826" y2="70.2281" stroke="black"
+                  stroke-width="3"/>
+            <line x1="35.5" y1="69.5" x2="67.5" y2="69.5" stroke="black" stroke-width="3"
+                  stroke-linecap="round" stroke-linejoin="round"/>
+            <circle cx="74" cy="58" r="15.5" fill="#EEFFE6" stroke="black" stroke-width="3"/>
+            <path d="M65.8578 58.5313L71.0777 64.3581L81.8549 53.3481" stroke="black"
+                  stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
+          </g>
+          <defs>
+            <clipPath id="clip0_138_424">
+              <rect width="100" height="75" fill="white"/>
+            </clipPath>
+          </defs>
+        </svg>
+
+      </td>
+    </tr>
     </tbody>
   </table>
 </article>
