Create UnvalidatedField enum
Co-authored-by: Ben Calegari <bcalegari@codeforamerica.org>

--- a/src/main/resources/templates/fragments/inputs/address.html
+++ b/src/main/resources/templates/fragments/inputs/address.html
@@ -20,7 +20,9 @@
   <th:block th:replace="'fragments/inputs/text' ::
                   text(inputName=${inputName + 'Zip'},
                   label=#{address.zip})"/>
-  <input type="hidden" th:name="${'_validate_' + inputName}" th:value="${validateAddress}"/>
+  <input type="hidden"
+         th:name="${T(formflow.library.data.UnvalidatedField).VALIDATE_ADDRESS + inputName}"
+         th:value="${validateAddress}"/>
 </th:block>
 </body>
 </html>
