Changed the name of icon fragments to not include icon in the name. #184394752

--- a/src/main/resources/templates/fragments/icons.html
+++ b/src/main/resources/templates/fragments/icons.html
@@ -1932,9 +1932,9 @@
       </td>
     </tr>
     <tr>
-      <td>nextStepsIcon</td>
+      <td>nextSteps</td>
       <td>
-        <svg th:fragment="nextStepsIcon" aria-hidden="true" width="100" height="75"
+        <svg th:fragment="nextSteps" aria-hidden="true" width="100" height="75"
              viewBox="0 0 100 75" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M79.5323 63.0161C73.4547 68.0396 65.2557 68.5292 57.473 69.8791C49.531 71.2566 41.4632 73.7579 33.8906 70.9325C25.8233 67.9224 18.7202 61.9052 15.1252 54.0783C11.6027 46.4091 13.1522 37.6751 14.8286 29.4309C16.4321 21.5451 18.5872 13.4229 24.4985 7.98227C30.2887 2.65303 38.4612 1.37867 46.2946 0.470024C53.841 -0.40534 61.5031 -0.296868 68.4234 2.88711C75.5542 6.16795 81.3467 11.6848 85.3504 18.4393C89.5582 25.5382 92.5384 33.6172 91.4737 41.7747C90.3944 50.0446 85.9478 57.7131 79.5323 63.0161Z"
@@ -1968,9 +1968,9 @@
       </td>
     </tr>
     <tr>
-      <td>submitAdditionalIcons</td>
+      <td>smallFile</td>
       <td>
-        <svg th:fragment="submitAdditionalIcons" aria-hidden="true" width="35" height="35"
+        <svg th:fragment="smallFile" aria-hidden="true" width="35" height="35"
              viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_114_502)">
             <path
@@ -1986,9 +1986,9 @@
       </td>
     </tr>
     <tr>
-      <td>downloadDocumentsIcon</td>
+      <td>smallDownloadDocuments</td>
       <td>
-        <svg th:fragment="downloadDocumentsIcon" aria-hidden="true" width="30" height="35"
+        <svg th:fragment="smallDownloadDocuments" aria-hidden="true" width="30" height="35"
              viewBox="0 0 30 35" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
               d="M26 12.6471L18.5714 12.6471V1L7.42857 1L7.42857 12.6471L0 12.6471L13 26.2353L26 12.6471ZM0 30.1177L0 34H26V30.1177L0 30.1177Z"
@@ -1997,9 +1997,9 @@
       </td>
     </tr>
     <tr>
-      <td>successComputerPrimaryIcon</td>
+      <td>computerWithCheckmark</td>
       <td>
-        <svg th:fragment="successComputerPrimaryIcon" aria-hidden="true" width="100" height="75"
+        <svg th:fragment="computerWithCheckmark" aria-hidden="true" width="100" height="75"
              viewBox="10 0 100 75" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g clip-path="url(#clip0_138_424)">
             <path fill-rule="evenodd" clip-rule="evenodd"
