--- a/src/main/resources/templates/fragments/inputs/address.html
+++ b/src/main/resources/templates/fragments/inputs/address.html
@@ -6,19 +6,19 @@
     th:with="validateAddress=${validate ? validate : true}"
 >
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName=${inputName + 'StreetAddress1'},
-                  label=#{address.street-address})"/>
+                  text(inputName=${inputName + T(formflow.library.inputs.Inputs).STREET_ADDRESS_1},
+                  label=#{address.street-address-1})"/>
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName=${inputName + 'StreetAddress2'},
-                  label=#{address.apartment})"/>
+                  text(inputName=${inputName + T(formflow.library.inputs.Inputs).STREET_ADDRESS_2},
+                  label=#{address.street-address-2})"/>
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName=${inputName + 'City'},
+                  text(inputName=${inputName + T(formflow.library.inputs.Inputs).CITY},
                   label=#{address.city})"/>
   <th:block th:replace="'fragments/inputs/state' ::
-                  state(inputName=${inputName + 'State'},
+                  state(inputName=${inputName + T(formflow.library.inputs.Inputs).STATE},
                   label=#{address.state})"/>
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName=${inputName + 'Zip'},
+                  text(inputName=${inputName + T(formflow.library.inputs.Inputs).ZIPCODE},
                   label=#{address.zip})"/>
   <input type="hidden"
          th:name="${T(formflow.library.data.UnvalidatedField).VALIDATE_ADDRESS + inputName}"
