--- a/src/test/resources/templates/testFlow/pageWithMultipleValidationInput.html
+++ b/src/test/resources/templates/testFlow/pageWithMultipleValidationInput.html
@@ -15,6 +15,10 @@
                 <th:block th:replace="'fragments/inputs/text' ::
                   text(inputName='inputWithMultipleValidations',
                   label='inputWithMultipleValidations')" />
+
+                <th:block th:replace="'fragments/inputs/text' ::
+                  text(inputName='inputWithSingleValidation',
+                  label='inputWithSingleValidation')" />
               </div>
             <div class="form-card__footer">
               <th:block th:replace="'fragments/continueButton' :: continue" />
