--- a/src/main/resources/templates/fragments/inputs/address.html
+++ b/src/main/resources/templates/fragments/inputs/address.html
@@ -3,25 +3,31 @@
 <body>
 <th:block
     th:fragment="address(validate, inputName)"
-    th:with="validateAddress=${validate ? validate : true}"
+    th:with="validateAddress=${validate ? validate : true},
+    streetAddress=${inputName + T(formflow.library.inputs.Inputs).STREET_ADDRESS_1},
+    streetAddress2=${inputName + T(formflow.library.inputs.Inputs).STREET_ADDRESS_2},
+    city=${inputName + T(formflow.library.inputs.Inputs).CITY},
+    state=${inputName + T(formflow.library.inputs.Inputs).STATE},
+    zipCode=${inputName + T(formflow.library.inputs.Inputs).ZIPCODE},
+    validateAddressInputName=${T(formflow.library.inputs.UnvalidatedField).VALIDATE_ADDRESS + inputName}"
 >
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName=${inputName + T(formflow.library.inputs.Inputs).STREET_ADDRESS_1},
+                  text(inputName=${streetAddress},
                   label=#{address.street-address-1})"/>
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName=${inputName + T(formflow.library.inputs.Inputs).STREET_ADDRESS_2},
+                  text(inputName=${streetAddress2},
                   label=#{address.street-address-2})"/>
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName=${inputName + T(formflow.library.inputs.Inputs).CITY},
+                  text(inputName=${city},
                   label=#{address.city})"/>
   <th:block th:replace="'fragments/inputs/state' ::
-                  state(inputName=${inputName + T(formflow.library.inputs.Inputs).STATE},
+                  state(inputName=${state},
                   label=#{address.state})"/>
   <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName=${inputName + T(formflow.library.inputs.Inputs).ZIPCODE},
+                  text(inputName=${zipCode},
                   label=#{address.zip})"/>
   <input type="hidden"
-         th:name="${T(formflow.library.data.UnvalidatedField).VALIDATE_ADDRESS + inputName}"
+         th:name="${validateAddressInputName}"
          th:value="${validateAddress}"/>
 </th:block>
 </body>
