--- a/src/test/resources/templates/testFlow/testAddressValidation.html
+++ b/src/test/resources/templates/testFlow/testAddressValidation.html
@@ -4,7 +4,7 @@
       <th:block
           th:replace="'fragments/inputs/address' :: address(validate=false , inputName='address')"/>
       <th:block
-          th:replace="'fragments/inputs/address' :: address(validate=true, inputName='validatedAddress')"/>
+          th:replace="'fragments/inputs/address' :: address(validate=true, inputName='validationOn')"/>
       <!--      <th:block-->
       <!--          th:replace="'fragments/display/validatedAddress' :: address(validate=true, inputName='validatedAddress')"/>-->
     </div>
