--- a/src/main/resources/templates/fragments/demoBanner.html
+++ b/src/main/resources/templates/fragments/demoBanner.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
 <body>
-<div th:fragment="demoBanner" th:if="${@environment.getProperty('demo')}" class="demo-banner">
-  This site is for example purposes only. If you need to submit an application, apply on <a
-    class="link--subtle"
-    href="https://mnbenefits.mn.gov/">MNbenefits</a>.
+<div th:fragment="demoBanner"
+     th:if="${!#arrays.isEmpty(@environment.getActiveProfiles()) && !#strings.isEmpty(profile) && #arrays.contains(@environment.getActiveProfiles(), profile)}"
+     class="demo-banner"
+     th:utext="${demoText}">
 </div>
 </body>
 </html>
