Pulling "Go back" out into a message property

--- a/src/main/resources/templates/fragments/goBack.html
+++ b/src/main/resources/templates/fragments/goBack.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html th:lang="${#locale.language}" xmlns:th="http://www.thymeleaf.org">
-<body>
 <div th:fragment="goBackLink" class="form-width">
-  <a th:text="'&lt; Go Back'"
+  <a th:text="'&lt; ' + #{general.go-back}"
      id="back-link"
      class="toolbar__left"
      href="#"
      onclick="window.history.back(); return false;"></a>
 </div>
-</body>
-</html>
