--- a/src/main/resources/templates/fragments/toolbar.html
+++ b/src/main/resources/templates/fragments/toolbar.html
@@ -17,6 +17,8 @@
         <!--        <select th:replace="fragments/localeSelect :: localeSelect"></select>-->
       </div>
     </div>
+    <th:block
+        th:replace="fragments/demoBanner :: demoBanner(demoText=#{demo.banner-text}, profile='demo')"/>
   </header>
 </th:block>
 </body>
