Add support for beforeSave on non-subflows
Updating README

Co-authored-by: Lauren Kemperman <lkemperman@codeforamerica.org>

--- a/src/test/resources/templates/testFlow/next.html
+++ b/src/test/resources/templates/testFlow/next.html
@@ -13,7 +13,7 @@
             <th:block th:ref="formContent">
               <div class="form-card__content">
                 <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName='someOtherInput',
+                  text(inputName='textInput',
                   label='Other input')" />
               </div>
             <div class="form-card__footer">
