Address Screen styling

--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -587,3 +587,28 @@ body,
 .demo-banner {
   line-height: 3rem;
 }
+
+/* Address Verification Screen */
+
+.address-validation .radio-button.left-aligned {
+  padding-left: 2.5rem;
+}
+
+.address-validation .radio-button.is-selected {
+  border: 2px #008060 solid;
+  border-radius: 5px;
+  background-color: unset;
+}
+
+.hide-radio-circle {
+  -webkit-appearance: none !important;
+  -moz-appearance: none !important;
+  -ms-appearance: none !important;
+  -o-appearance: none !important;
+  appearance: none !important;
+  display: none !important;
+}
+
+.address-validation .radio-button div {
+  font-weight: normal;
+}
