--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -600,6 +600,15 @@ body,
   background-color: unset;
 }
 
+.address-validation .radio-button {
+  border-radius: 5px;
+  border-color: transparent;
+}
+
+.address-validation .radio-button:hover {
+  border-color: #121111;
+}
+
 .hide-radio-circle {
   -webkit-appearance: none !important;
   -moz-appearance: none !important;
