--- a/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
+++ b/src/main/resources/META-INF/resources/webjars/form-flow/0.0.1/css/libraryStyles.css
@@ -279,6 +279,14 @@ url('/webjars/form-flow/0.0.1/fonts/MaterialIcons-Regular.svg') format('svg');
   font-size: 1.6rem;
 }
 
+.list--checkmark li:before {
+  background-image: url('/webjars/form-flow/0.0.1/images/emojis/checkmark.png');
+}
+
+.list--crossmark li:before {
+  background-image: url('/webjars/form-flow/0.0.1/images/emojis/crossmark.png');
+}
+
 /* TODO: delete/fix in other way */
 .page-wrapper {
   padding-bottom: 253px;
