--- a/src/main/resources/templates/fragments/inputs/address.html
+++ b/src/main/resources/templates/fragments/inputs/address.html
@@ -4,11 +4,11 @@
 <th:block
     th:fragment="address(validate, inputName)"
     th:with="
-    streetAddress=${inputName + T(formflow.library.inputs.AddressParts).STREET_ADDRESS_1},
-    streetAddress2=${inputName + T(formflow.library.inputs.AddressParts).STREET_ADDRESS_2},
-    city=${inputName + T(formflow.library.inputs.AddressParts).CITY},
-    state=${inputName + T(formflow.library.inputs.AddressParts).STATE},
-    zipCode=${inputName + T(formflow.library.inputs.AddressParts).ZIPCODE},
+    streetAddress=${inputName + T(formflow.library.inputs.AddressParts).STREET_ADDRESS_1.toString()},
+    streetAddress2=${inputName + T(formflow.library.inputs.AddressParts).STREET_ADDRESS_2.toString()},
+    city=${inputName + T(formflow.library.inputs.AddressParts).CITY.toString()},
+    state=${inputName + T(formflow.library.inputs.AddressParts).STATE.toString()},
+    zipCode=${inputName + T(formflow.library.inputs.AddressParts).ZIPCODE.toString()},
     validateAddressInputName=${T(formflow.library.inputs.UnvalidatedField).VALIDATE_ADDRESS + inputName}"
 >
   <th:block th:replace="'fragments/inputs/text' ::
