Adds tests for OnPost Action

--- a/src/test/resources/templates/testFlow/inputs.html
+++ b/src/test/resources/templates/testFlow/inputs.html
@@ -22,7 +22,8 @@
                           label='areaInput')"/>
               <th:block th:replace="'fragments/inputs/date' ::
                           date(inputName='date',
-                          label='dateInput')"/>
+                          label='dateInput',
+                          groupName='dateFull')"/>
               <th:block th:replace="'fragments/inputs/number' ::
                           number(inputName='numberInput',
                           label='numberInput')"/>
