--- a/src/test/resources/templates/testFlow/testAddressValidationNotFound.html
+++ b/src/test/resources/templates/testFlow/testAddressValidationNotFound.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}">
-<head th:replace="fragments/head :: head(title='testAddressVerification')"></head>
+<head th:replace="fragments/head :: head(title='testAddressValidationNotFound')"></head>
 <body>
 <div class="page-wrapper">
   <section class="slab">
@@ -9,11 +9,10 @@
         <th:block
             th:replace="'fragments/form' :: form(action=${formAction}, content=~{:: verifyAddress})">
           <th:block th:ref="verifyAddress">
-            <th:block th:replace="'fragments/screens/addressSelectionScreen' ::
-                  addressSelectionScreen(
+            <th:block th:replace="'fragments/screens/addressSuggestionNotFound' ::
+                  addressSuggestionNotFound(
                     addressInputToCheck='validationOn',
-                    inputName='useValidatedValidationOn',
-                    editAddressURL=${'/testFlow/testAddressValidation'}
+                    inputName='useValidatedValidationOn'
                   )"/>
           </th:block>
         </th:block>
