--- a/src/test/resources/templates/testFlow/first.html
+++ b/src/test/resources/templates/testFlow/first.html
@@ -9,15 +9,16 @@
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
             th:replace="'fragments/cardHeader' :: cardHeader(header='First Page', subtext='This is the first page!')"/>
-        <th:block th:replace="'fragments/form' :: form(action='/testFlow/first', content=~{::formContent})">
+        <th:block
+            th:replace="'fragments/form' :: form(action='/flow/testFlow/first', content=~{::formContent})">
           <th:block th:ref="formContent">
             <div class="form-card__content">
               <th:block th:replace="'fragments/inputs/text' ::
             text(inputName='firstName',
-            label='First name')" />
+            label='First name')"/>
             </div>
             <div class="form-card__footer">
-              <th:block th:replace="'fragments/continueButton' :: continue" />
+              <th:block th:replace="'fragments/continueButton' :: continue"/>
             </div>
           </th:block>
         </th:block>
@@ -25,6 +26,6 @@
     </div>
   </section>
 </div>
-<th:block th:replace="fragments/footer :: footer" />
+<th:block th:replace="fragments/footer :: footer"/>
 </body>
 </html>
