--- a/src/test/resources/templates/testFlow/other.html
+++ b/src/test/resources/templates/testFlow/other.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html th:lang="${#locale.language}">
 <head th:replace="fragments/head :: head(title='Other Page')"></head>
-<body >
+<body>
 <div class="page-wrapper">
   <div th:replace="fragments/toolbar :: toolbar"></div>
   <section class="slab">
@@ -9,15 +9,16 @@
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
             th:replace="'fragments/cardHeader' :: cardHeader(header='Other Page', subtext='This is the other page!')"/>
-          <th:block th:replace="'fragments/form' :: form(action='/testFlow/other', content=~{::formContent})">
-            <th:block th:ref="formContent">
-              <div class="form-card__content">
-                <th:block th:replace="'fragments/inputs/text' ::
+        <th:block
+            th:replace="'fragments/form' :: form(action='/flow/testFlow/other', content=~{::formContent})">
+          <th:block th:ref="formContent">
+            <div class="form-card__content">
+              <th:block th:replace="'fragments/inputs/text' ::
                   text(inputName='otherInput',
-                  label='Other input')" />
-              </div>
+                  label='Other input')"/>
+            </div>
             <div class="form-card__footer">
-              <th:block th:replace="'fragments/continueButton' :: continue" />
+              <th:block th:replace="'fragments/continueButton' :: continue"/>
             </div>
           </th:block>
         </th:block>
@@ -25,6 +26,6 @@
     </div>
   </section>
 </div>
-<th:block th:replace="fragments/footer :: footer" />
+<th:block th:replace="fragments/footer :: footer"/>
 </body>
 </html>
