Remove disabled and selected from selectOptionPlaceholder

--- a/src/main/resources/templates/fragments/inputs/selectOptionPlaceholder.html
+++ b/src/main/resources/templates/fragments/inputs/selectOptionPlaceholder.html
@@ -4,7 +4,7 @@
 <th:block
     th:fragment="selectOptionPlaceholder"
     th:assert="${!#strings.isEmpty(optionText)}">
-  <option value="" disabled selected th:text="${optionText}"></option>
+  <option value="" th:text="${optionText}"></option>
 </th:block>
 </body>
 </html>
