--- a/src/test/resources/templates/testFlow/contactInfoPreference.html
+++ b/src/test/resources/templates/testFlow/contactInfoPreference.html
@@ -10,37 +10,38 @@
       <main id="content" role="main" class="form-card spacing-above-35">
         <th:block
             th:replace="'fragments/cardHeader' :: cardHeader(header='How to contact')"/>
-          <th:block th:replace="'fragments/form' :: form(action=${formAction}, content=~{::formContent})">
-            <th:block th:ref="formContent">
-              <div class="form-card__content">
-                
-                <th:block
+        <th:block
+            th:replace="'fragments/form' :: form(action=${formAction}, content=~{::formContent})">
+          <th:block th:ref="formContent">
+            <div class="form-card__content">
+
+              <th:block
                   th:replace="'fragments/inputs/phone' :: phone(
                   inputName='phoneNumber',
                   label='please enter a phone number')"/>
 
-                <th:block th:replace="'fragments/inputs/text' ::
-                  text(inputName='emailAddress',
-                  label='please enter an email address')" />
-                
-                <th:block th:replace="'fragments/inputs/checkboxFieldset' ::
-                  checkboxFieldset(inputName='contactMethod',
+              <th:block th:replace="'fragments/inputs/text' ::
+                  text(inputName='email',
+                  label='please enter an email address')"/>
+
+              <th:block th:replace="'fragments/inputs/checkboxFieldset' ::
+                  checkboxFieldset(inputName='howToContactYou',
                   label='how to contact',
                   content=~{::contactMethods})">
-                    <th:block th:ref="contactMethods">
-                      <!-- Copy the below input if you want to add more -->
-                      <th:block
-                        th:replace="'fragments/inputs/checkboxInSet' :: checkboxInSet(inputName='contactMethod',value='emailPreferred', label='contact by email')"/>
+                <th:block th:ref="contactMethods">
+                  <!-- Copy the below input if you want to add more -->
+                  <th:block
+                      th:replace="'fragments/inputs/checkboxInSet' :: checkboxInSet(inputName='howToContactYou',value='email', label='contact by email')"/>
 
-                      <th:block
-                          th:replace="'fragments/inputs/checkboxInSet' :: checkboxInSet(inputName='contactMethod',value='phonePreferred', label='contact by phone')"/>
-                    </th:block>
+                  <th:block
+                      th:replace="'fragments/inputs/checkboxInSet' :: checkboxInSet(inputName='howToContactYou',value='phone', label='contact by phone')"/>
                 </th:block>
+              </th:block>
 
-                
-              </div>
+
+            </div>
             <div class="form-card__footer">
-              
+
             </div>
           </th:block>
         </th:block>
@@ -48,6 +49,6 @@
     </div>
   </section>
 </div>
-<th:block th:replace="fragments/footer :: footer" />
+<th:block th:replace="fragments/footer :: footer"/>
 </body>
 </html>
